# ECS122b-Final-Project

./: CMakeLists.txt  LCSTwoStrings.cpp  LCSTwoStrings.h  LCSTwoStringsSanityCheck.cpp  LCSTwoStringsTests.cpp  Makefile  README.md  buildTree.cpp  buildTree.h  edge.cpp  edge.h  linearizeString.cpp  linearizeString.h  linearizeStringSanityCheck.cpp  linearizeStringTests.cpp  main.cpp  node.h  suffixTree.cpp  suffixTree.h  suffixTreeSanityCheck.cpp
